--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -107,8 +107,14 @@
         });
 
         // Chat__loadMore(); // 즉시실행
-        setTimeout(Chat__loadMore,500);
+        // setTimeout(Chat__loadMore,500); // 0.5초 뒤에 실행 -> 무분별한 호출 야기
     }
+
+    const sse = new EventSource("/sse/connect");
+
+    sse.addEventListener('chat__messageAdded', e => {
+        Chat__loadMore();
+    });
 
     // 최초에 한번 불러오기
     Chat__loadMore();
